--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-MONGO_URI=mongodb://localhost:27017/presale
-MONGO_DB=presale
+MONGO_URI=mongodb://localhost:27017/?authSource=wineryPresale
+MONGO_DB=wineryPresale
 CHAIN_ID=97
+MONGO_USERNAME=presale
+MONGO_PASSWORD=presale123
