implement api check verify ref code

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_URI=mongodb://localhost:27017/?authSource=wineryPresale
-MONGO_DB=wineryPresale
+MONGO_URI=mongodb://localhost:27017/?authSource=presale
+MONGO_DB=presale
 CHAIN_ID=97
 MONGO_USERNAME=presale
 MONGO_PASSWORD=presale123
