--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_URI=mongodb://localhost:27017/?authSource=presale
-MONGO_DB=presale
+MONGO_URI=mongodb://presale:presale123@localhost:27017/?authSource=devPresale
+MONGO_DB=devPresale
 CHAIN_ID=97
 MONGO_USERNAME=presale
 MONGO_PASSWORD=presale123
