--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
-MONGO_URI=mongodb://presale:presale123@localhost:27017/?authSource=devPresale
+MONGO_URI=mongodb://localhost:27017
 MONGO_DB=devPresale
 CHAIN_ID=97
 MONGO_USERNAME=presale
 MONGO_PASSWORD=presale123
+
+#MONGO_URI=mongodb://presale:presale123@localhost:27017/?authSource=devPresale
+#MONGO_DB=devPresale
+#CHAIN_ID=97
+#MONGO_USERNAME=presale
+#MONGO_PASSWORD=presale123
