--- a/.env
+++ b/.env
@@ -4,8 +4,16 @@ CHAIN_ID=97
 MONGO_USERNAME=presale
 MONGO_PASSWORD=presale123
 
+CONTRACT_NFT=0xCb87636e5c3eB377A558b31EbD02148Fba75b286
+BSC_RPC=https://bsc-testnet.nodereal.io/v1/29428fcbbb9d4e8eb33e3c98a9b9c9cc
+KEY_INIT=WeAreFamilymartketWinery
+
 #MONGO_URI=mongodb://presale:presale123@localhost:27017/?authSource=devPresale
 #MONGO_DB=devPresale
 #CHAIN_ID=97
 #MONGO_USERNAME=presale
 #MONGO_PASSWORD=presale123
+
+#CONTRACT_NFT=0x791b9093F531B83820740F7aADACDBb05dd31a62
+#BSC_RPC=https://dataseed1.binance.org/
+
