update response metadata

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-MONGO_URI=mongodb://localhost:27017
-MONGO_DB=devPresale
+MONGO_DB=presale
 CHAIN_ID=97
 MONGO_USERNAME=presale
-MONGO_PASSWORD=presale123
+MONGO_PASSWORD=PreSaLe123
+MONGO_HOST=54.179.231.41
+MONGO_PORT=27017
 
 CONTRACT_NFT=0xCb87636e5c3eB377A558b31EbD02148Fba75b286
 BSC_RPC=https://bsc-testnet.nodereal.io/v1/29428fcbbb9d4e8eb33e3c98a9b9c9cc
