--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/schedule": "^1.1.0",
     "@nestjs/typeorm": "^8.0.3",
     "abi-decoder": "^2.4.0",
+    "bignumber.js": "^9.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
