--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-MONGO_DB=swap-test
+
+MONGO_DB=presale
 CHAIN_ID=97
-MONGO_USERNAME=admin
-MONGO_PASSWORD=pass
-MONGO_HOST=localhost
+MONGO_USERNAME=presale
+MONGO_PASSWORD=PreSaLe123
+MONGO_HOST=54.179.231.41
 MONGO_PORT=27017
 
 CONTRACT_NFT=0xD700d496494Cd9cA5C2A35301801EEf3D9ad12f7
