--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-; MONGO_DB=presale
-; CHAIN_ID=97
-; MONGO_USERNAME=
-; MONGO_PASSWORD=
-; MONGO_HOST=localhost
-; MONGO_PORT=27017
-
 MONGO_DB=presale
 CHAIN_ID=97
-MONGO_USERNAME=presale
-MONGO_PASSWORD=PreSaLe123
-MONGO_HOST=54.179.231.41
+MONGO_USERNAME=
+MONGO_PASSWORD=
+MONGO_HOST=localhost
 MONGO_PORT=27017
+
+;MONGO_DB=presale
+;CHAIN_ID=97
+;MONGO_USERNAME=presale
+;MONGO_PASSWORD=PreSaLe123
+;MONGO_HOST=54.179.231.41
+;MONGO_PORT=27017
 
 CONTRACT_NFT=0xD700d496494Cd9cA5C2A35301801EEf3D9ad12f7
 CONTRACT_LAUNCHPAD=0xDaBE91c66A98580CF33d3a25D239AE886fDB77A3
