--- a/.env
+++ b/.env
@@ -28,6 +28,7 @@ CONTRACT_AIRDROP=0x2F1e255Fd8212620eE46C150B95d11d9CFc56984
 CONTRACT_REWARDS=0x96B345d1F161944b764A14981875704336D7f776
 CONTRACT_STAKING_NFT=0xa1312bEA230408c049020A6147F7b68b9E120dD5
 CONTRACT_PRICE_GETTER=0xfA2768430F8C6570f61DC3C3b07e2e594082cE97
+CONTRACT_VOTING=0x4d7Bd37F661211De06599fA4449CBFc72fE3Ba23
 LAUNCHPAD_CONTRACT=0xE9Ab9Be18001A04997404E9A6fad054475E156D9
 MARKET_CONTRACT=0xF975cFF494eF91039E186c0a7017baD119B6cc92
 ROUTER_CONTRACT=0x7f8E08dFB5E716057838b51361750f5459B610Ff
@@ -73,6 +74,7 @@ BSC_API_KEY=C5GIF1QWQHQF2I23778MA24P4YW7NJNCMN
 ; CONTRACT_LAUNCHPAD=0x048d2bBf1AaB354FEDAcE0CBef4C988DB185c62e
 ; CONTRACT_AIRDROP=0xc74e9DEc063F55aFAC6FC58698b66369158086E2
 ; CONTRACT_PRICE_GETTER=0xC8485D39FD1f5419c0029960112D04cfE0Ca8722
+; CONTRACT_VOTING=0xdbf261896f524c7d75e20b00e5100fc8bbebbe4e
 ; LAUNCHPAD_CONTRACT=0xE9Ab9Be18001A04997404E9A6fad054475E156D9
 ; MARKET_CONTRACT=0xb903c704E8aA4A682A408AcbFf4Dc736E88a50A4
 
