--- a/.env
+++ b/.env
@@ -76,6 +76,7 @@ CONTRACT_NFT=0x735eE12EEE6C98635347a9d3a84E968CAf4855DE
 CONTRACT_LAUNCHPAD=0x048d2bBf1AaB354FEDAcE0CBef4C988DB185c62e
 CONTRACT_AIRDROP=0xc74e9DEc063F55aFAC6FC58698b66369158086E2
 CONTRACT_PRICE_GETTER=0xC8485D39FD1f5419c0029960112D04cfE0Ca8722
+CONTRACT_REWARDS=0x5D5d0F6200eFEaEf0e1df5eD31a8AcF3e637C505
 CONTRACT_VOTING=0xdbf261896f524c7d75e20b00e5100fc8bbebbe4e
 LAUNCHPAD_CONTRACT=0xE9Ab9Be18001A04997404E9A6fad054475E156D9
 MARKET_CONTRACT=0xb903c704E8aA4A682A408AcbFf4Dc736E88a50A4
