adding new db url

--- a/.env
+++ b/.env
@@ -5,6 +5,12 @@ MONGO_USERNAME=presale
 MONGO_PASSWORD=PreSaLe123
 MONGO_HOST=54.179.231.41
 MONGO_PORT=27017
+# MONGO_DB=winerydao
+# CHAIN_ID=97
+# MONGO_USERNAME=admin
+# MONGO_PASSWORD=pass123!@#
+# MONGO_HOST=3.1.82.48
+# MONGO_PORT=27017
 
 
 CONTRACT_NFT=0xD700d496494Cd9cA5C2A35301801EEf3D9ad12f7
