fix today reward + adding user history profit

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ MONGO_PORT=27017
 # MONGO_DB=winerydao
 # CHAIN_ID=97
 # MONGO_USERNAME=admin
-# MONGO_PASSWORD=pass123!@#
+# MONGO_PASSWORD="pass123!%40#"
 # MONGO_HOST=3.1.82.48
 # MONGO_PORT=27017
 
